<resources>
    <string name="app_name">Financial Manager</string>
    <string name="financial_manager">Financial Manager</string>
    <string name="account_balance">Account Balance</string>
    <string name="amout_remainin">This is the amout remaining in your account</string>
    <string name="info">Info</string>
    <string name="balance">Balance:</string>
    <string name="income">Monthly Income:</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="change_incpme">Change your monthly income</string>
    <string name="welocome1">Hello, I am your Financial Manager.</string>
    <string name="welocome2">Before we start, I need to do some presets</string>
</resources>
