<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C4C4C"
    tools:context=".PresetsActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="470dp"
        android:background="@color/colorPrimary"
        android:onClick="start"
        android:shadowColor="@color/primary_text"
        android:text="@string/start"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="205dp"
        android:layout_height="83dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="TextView"
        android:textColor="@color/primary_text"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/welocome1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="205dp"
        android:layout_height="83dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="TextView"
        android:textColor="@color/primary_text"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/welocome2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="205dp"
        android:layout_height="51dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="250dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="TextView"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/welocome2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="350dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="TextView"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/welocome2" />

    <EditText
        android:id="@+id/balanceEditText"
        android:layout_width="205dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/primary_text"
        android:textColorHighlight="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        android:textColorLink="@color/secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/incomeEditText"
        android:layout_width="205dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/primary_text"
        android:textColorHighlight="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        android:textColorLink="@color/secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>